# water-mark-remover

./: .gitignore  MG.ipynb  README.md  pretrain_discriminator.py  pretrained_unet.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: discriminator_sweep.yml  entrega_config.yml  example_config.yml  pretrained_discriminator.yml
water_mark_remover/: __init__.py  building_blocks.py  factories.py  kaggle_utils.py  transfer_weights.py  utils.py  visualization.py
